tests/More/Good/83.tig
/* Override */
let	
	function a()=print("a")	
	var i:=1	
	function b()=a()	
	var j:=2	
	function a()=print("b")	
	function c()=a()
in	
	b();	
	c()
end 