tests/More/Bad/23.tig
/* error : formals are more than actuals */
let
	function g (a:int , b:string):int = a
in
	g("one")
end


